--- a/templates/accounts/registerUser.html
+++ b/templates/accounts/registerUser.html
@@ -15,9 +15,10 @@
                                     marketplace.</p>
                                 <hr>
                                 <div id="restaurant-sets-holder">
-                                    <form action="{% url 'register user' %}" class="form-fields-set foodbakery-dev-restaurant-form" method="post"
-                                          action="register-select-package.html">
+                                    <form action="{% url 'register_user' %}"
+                                          class="form-fields-set foodbakery-dev-restaurant-form" method="post">
                                         {% csrf_token %}
+
                                         <ul class="register-add-restaurant-tab-container restaurant-information-tab-container">
                                             <li>
                                                 <div class="row">
@@ -27,7 +28,8 @@
                                                                 <li>
                                                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                                         <div class="field-holder">
-                                                                            <label>First name</label>{{ form.first_name }}
+                                                                            <label>First
+                                                                                name</label>{{ form.first_name }}
                                                                         </div>
                                                                     </div>
                                                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -78,10 +80,10 @@
                                                             {% endfor %}
                                                         {% endif %}
                                                     {% endfor %}
-                                                
-                                                <li style="color: red">
-                                                    {{ form.non_field_errors }} 
-                                                </li>
+
+                                                    <li style="color: red">
+                                                        {{ form.non_field_errors }}
+                                                    </li>
                                                 </ul>
                                                 <div class="row">
                                                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -94,6 +96,14 @@
                                                         </div>
                                                     </div>
                                                 </div>
+
+                                                <div class="row">
+                                                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                                        {# load message #}
+                                                        {% include 'includes/alerts.html' %}
+                                                    </div>
+                                                </div>
+
                                             </li>
                                         </ul>
                                     </form>
