--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -38,7 +38,7 @@
 
                             </span><a
                                 class="get-start-btn"
-                                href="register-restaurant.html">
+                                href="{% url 'register_vendor' %}">
                             Register
                             Restaurant </a>
                         </div>
