added protect for routes

--- a/templates/accounts/customer_dashboard.html
+++ b/templates/accounts/customer_dashboard.html
@@ -2,6 +2,6 @@
 
 {% block content %}
     <h4>Welcome {{ user.username }}</h4>
-
+    <p>Thi is a {{ user.get_role }}</p>
     {% include 'includes/alerts.html' %}
 {% endblock %}
