--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -33,7 +33,7 @@
                         <div class="login-option">
                             {% if user.is_authenticated %}
                                 <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in"
-                                   href="{% url 'dashboard' %}">My Account</a>
+                                   href="{% url 'my_account' %}">My Account</a>
                                 <a class="cs-color cs-popup-joinus-btn login-popup text-danger" data-target="#sign-in"
                                    href="{% url 'logout' %}">Logout</a>
 
