--- a/templates/accounts/reset_password.html
+++ b/templates/accounts/reset_password.html
@@ -10,11 +10,11 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                         <div class="user-dashboard loader-holder" style="width: 450px; min-height: auto;">
                             <div class="user-holder">
-                                <h4 class="text-center" style="margin-bottom: 0;">Sign In</h4>
-                                <p class="text-center">Order food from your favorite restaurants.</p>
+                                <h4 class="text-center" style="margin-bottom: 0;">Reset your password</h4>
+                                <p class="text-center">Please enter your new password.</p>
                                 <hr>
                                 <div id="restaurant-sets-holder">
-                                    <form action="{% url 'login' %}"
+                                    <form action="{% url "reset_password" %} "
                                           class="form-fields-set foodbakery-dev-restaurant-form" method="post"
                                           enctype="multipart/form-data">
                                         {% csrf_token %}
@@ -27,16 +27,16 @@
 
                                                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                                 <div class="field-holder">
-                                                                    <label>Email Address</label>
-                                                                    <input type="email" name="email"
-                                                                           placeholder="Enter your email address">
+                                                                    <label>Password</label>
+                                                                    <input type="password" name="password"
+                                                                           placeholder="Set new password">
                                                                 </div>
                                                             </div>
                                                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                                 <div class="field-holder">
-                                                                    <label>Password</label>
-                                                                    <input type="password" name="password"
-                                                                           placeholder="Enter your password">
+                                                                    <label>Confirm password</label>
+                                                                    <input type="password" name="confirm_password"
+                                                                           placeholder="Confirm new password">
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -49,10 +49,9 @@
                                                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                         <div class="field-holder">
                                                             <div class="payment-holder">
-                                                                <input type="submit" value="Submit"
+                                                                <input type="submit" value="Reset password"
                                                                        id="btn-next-restaurant-information"
                                                                        class="bgcolor">
-                                                                <a href="{% url 'forgot_password' %}" class="float-right">Forgot password?</a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -78,4 +77,4 @@
     </div>
 
 
-{% endblock %} 
+{% endblock %}
