--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -4,9 +4,9 @@
     <!-- Header Start -->
     <header id="header">
         <div class="main-header">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                    <div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
                         <div class="logo">
                             <figure>
                                 <a href="{% url 'home' %}" class="light-logo">
@@ -29,8 +29,9 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                         <div class="login-option">
+                        <a href="{% url 'marketplace' %}" class="btn btn-outline-danger text-uppercase font-weight-bold">Marketplace</a>
                             {% if user.is_authenticated %}
                                 <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in"
                                    href="{% url 'my_account' %}">My Account</a>
@@ -38,16 +39,15 @@
                                    href="{% url 'logout' %}">Logout</a>
 
                             {% else %}
-                                <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in"
+                                <a class="cs-color cs-popup-joinus-btn login-popup ml-3" data-target="#sign-in"
                                    href="{% url 'login' %}">Login /</a>
                                 <span><a href="{% url 'register_user' %}"
                                          class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a>
 
-                            </span><a
-                                    class="get-start-btn"
+                            </span>
+                                <a class="get-start-btn"
                                     href="{% url 'register_vendor' %}">
-                                Register
-                                Restaurant </a>
+                                Register Restaurant </a>
                             {% endif %}
                         </div>
                     </div>
