--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -31,6 +31,17 @@
                     </div>
                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
                         <div class="login-option">
+
+                        {% if user.is_authenticated %}
+                            <a href="">
+                                <i class="fa fa-shopping-cart text-danger" style="font-size: 20px;">
+                                    <span class="badge badge-warning" id="cart_counter" style="border-radius: 50px; position: relative; bottom: 10px; left: -5px;">
+                                        {{ cart_count }}
+                                    </span>
+                                </i>
+                            </a>
+                        {% endif %}
+
                         <a href="{% url 'marketplace' %}" class="btn btn-outline-danger text-uppercase font-weight-bold">Marketplace</a>
                             {% if user.is_authenticated %}
                                 <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in"
