--- a/FoodOnline_main/static/css/custom.css
+++ b/FoodOnline_main/static/css/custom.css
@@ -35,3 +35,11 @@ main-search.fancy .field-holder input[type=text] {
 table > tbody > tr > td {
     border: none !important;
 }
+
+#opening_hours select {
+    padding: 5px 10px !important;
+}
+
+.btn-success.add_hour {
+    padding: 7px 15px;
+}
