--- a/templates/home.html
+++ b/templates/home.html
@@ -139,9 +139,15 @@
                                                                  class="img-thumb wp-post-image" alt=""></a>
                                                         {% endif %}
                                                 </figure>
+                                            {% if vendor.is_open %}
+                                                <span class="restaurant-status open">
+													<em class="bookmarkRibbon"></em>Open
+												</span>
+                                            {% else %}
                                                 <span class="restaurant-status close">
 													<em class="bookmarkRibbon"></em>Close
 												</span>
+                                            {% endif %}
                                             </div>
                                             <div class="text-holder">
 
