Place order and generate order number

--- a/templates/marketplace/checkout.html
+++ b/templates/marketplace/checkout.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 
@@ -18,7 +19,7 @@
                                     <div class="menu-itam-holder">
 
                                         <div id="menu-item-list-6272" class="menu-itam-list">
-                                            <form action="#" method="POST">
+                                            <form action="{% url 'place_order' %}" method="POST">
                                                 {% csrf_token %}
 
                                                 <div class="row">
@@ -91,39 +92,33 @@
 
 
                                             <ul>
-                                                {% if cart_items %}
-                                                    {% for item in cart_items %}
-                                                        <li id="cart-item-{{ item.id }}">
-                                                            <div class="image-holder"><img
-                                                                    src="{{ item.fooditem.image.url }}" alt="">
-                                                            </div>
-                                                            <div class="text-holder">
-                                                                <h6>{{ item.fooditem }}</h6>
-                                                                <span>{{ item.fooditem.description }}</span>
-                                                                <a href="{% url 'vendor_detail' item.fooditem.vendor.vendor_slug %}"
-                                                                   class="badge badge-warning">
-                                                                    {{ item.fooditem.vendor }}
-                                                                </a>
-                                                            </div>
-                                                            <div class="quantity"
-                                                                 style="display: inline-block; position: absolute; top: 50%; transform: translateY(-50%); margin-top: -10px; margin-left: -70px;">
-                                                                <span>{{ item.quantity }} QTY</span>
-                                                            </div>
-                                                            <div class="price-holder">
-                                                                <span class="price">${{ item.fooditem.price }}</span>
-                                                                <a href="#" class="decrease_cart"
-                                                                   data-id="{{ item.fooditem.id }}" id="{{ item.id }}"
-                                                                   data-url="{% url 'decrease_cart' item.fooditem.id %}"
-                                                                   style="margin-right: 28px;"><i
-                                                                        class="icon-minus text-color"></i></a>
-                                                            </div>
-                                                        </li>
-                                                    {% endfor %}
-                                                {% else %}
-                                                    <div class="text-center p-5">
-                                                        <h3>Cart is empty</h3>
-                                                    </div>
-                                                {% endif %}
+                                                {% for item in cart_items %}
+                                                    <li id="cart-item-{{ item.id }}">
+                                                        <div class="image-holder"><img
+                                                                src="{{ item.fooditem.image.url }}" alt="">
+                                                        </div>
+                                                        <div class="text-holder">
+                                                            <h6>{{ item.fooditem }}</h6>
+                                                            <span>{{ item.fooditem.description }}</span>
+                                                            <a href="{% url 'vendor_detail' item.fooditem.vendor.vendor_slug %}"
+                                                               class="badge badge-warning">
+                                                                {{ item.fooditem.vendor }}
+                                                            </a>
+                                                        </div>
+                                                        <div class="quantity"
+                                                             style="display: inline-block; position: absolute; top: 50%; transform: translateY(-50%); margin-top: -10px; margin-left: -70px;">
+                                                            <span>{{ item.quantity }} QTY</span>
+                                                        </div>
+                                                        <div class="price-holder">
+                                                            <span class="price">${{ item.fooditem.price }}</span>
+                                                            <a href="#" class="decrease_cart"
+                                                               data-id="{{ item.fooditem.id }}" id="{{ item.id }}"
+                                                               data-url="{% url 'decrease_cart' item.fooditem.id %}"
+                                                               style="margin-right: 28px;"><i
+                                                                    class="icon-minus text-color"></i></a>
+                                                        </div>
+                                                    </li>
+                                                {% endfor %}
                                             </ul>
 
 
@@ -160,15 +155,28 @@
                                                         <span id="total">{{ grand_total }}</span>
                                                     </span>
                                                 </li>
-                                                <button type="submit" class="btn btn-danger w-100 p-2 mt-3">PLACE
-                                                    ORDER
+
+                                                {# Select peyment mrthod #}
+                                                <h5>SELECT PAYMENT METHOD</h5>
+                                                <div class="payment-method">
+                                                    <label>
+                                                        <input type="radio" name="payment_method" value="PayPal">
+                                                        <img src="{% static 'images/PayPal.png' %}" alt="PayPal"
+                                                             width="100">
+                                                    </label>
+                                                </div>
+                                                <span class="text-danger" id="payment-method-error"></span>
+                                                {# Select peyment mrthod #}
+
+                                                <button onclick="return payMethodConfirm();" type="submit"
+                                                        class="btn btn-danger w-100 p-2 mt-3">PLACE ORDER
                                                 </button>
                                             </ul>
+
+
+                                            {# end the form #}
+                                            </form>
                                         </div>
-
-                                        {# End the form #}
-                                        </form>
-
 
                                     </div>
                                 </div>
@@ -182,5 +190,26 @@
         </div>
     </div>
 
+    <script>
+        function payMethodConfirm() {
+            var payMethod = $("input[name='payment_method']:checked").val()
+            if (!payMethod) {
+                $('#payment-method-error').html("Select Payment Method!");
+                return false;
+            } else {
+                var conf = confirm('You have selected ' + payMethod + ' as your preferred payment method.\nClick "OK" to continue.')
+                if (conf == true) {
+                    return true;
+                } else {
+                    return false;
+                }
+            }
+
+        }
+
+        $('input[name=payment_method]').on('change', function () {
+            $('#payment-method-error').html("");
+        })
+    </script>
 
 {% endblock %}
