--- a/templates/orders/place_order.html
+++ b/templates/orders/place_order.html
@@ -151,6 +151,7 @@
         var url = "{% url 'payments' %}"
         var order_number = "{{ order.order_number }}"
         const csrftoken = getCookie('csrftoken');
+        var order_complete = "{% url 'order_complete' %}"
         // Render the PayPal button into #paypal-button-container
         paypal.Buttons({
 
@@ -175,12 +176,12 @@
                     var transaction_id = transaction.id
                     var status = orderData.status
                     var payment_method = 'PayPal'
-                    sendTrasaction(transaction_id, payment_method, status);
+                    sendTransaction(transaction_id, payment_method, status);
 
                     // Replace the above to show a success message within this page, e.g.
-                    // const element = document.getElementById('paypal-button-container');
-                    // element.innerHTML = '';
-                    // element.innerHTML = '<h3>Thank you for your payment!</h3>';
+                    const element = document.getElementById('paypal-button-container');
+                    element.innerHTML = '';
+                    element.innerHTML = '<h4 class="text-center"><i class="fa fa-spinner fa-spin"></i> Please wait...</h4>';
                     // Or go to another URL:  actions.redirect('thank_you.html');
                 });
             }
@@ -190,9 +191,9 @@
 
         {# Send the data to payments view to store in the database #}
 
-        function sendTrasaction(transaction_id, payment_method, status) {
+        function sendTransaction(transaction_id, payment_method, status) {
             $.ajax({
-                type: POST,
+                type: 'POST',
                 url: url,
                 data: {
                     'order_number': order_number,
