--- a/templates/includes/customer_sidebar.html
+++ b/templates/includes/customer_sidebar.html
@@ -5,14 +5,11 @@
             active
             {% endif %}"><a href="{% url 'customer' %}"><i
                     class="icon-dashboard3"></i>Dashboard</a></li>
-            <li class="{% if '/my_orders/' in request.path %}active{% endif %}"><a href="{% url 'customer_my_orders' %}"><i class="icon-add_shopping_cart"></i>My Orders</a>
-            </li>
+            <li class="{% if '/my_orders/' in request.path or '/order_detail/' in request.path %}active{% endif %}"><a href="{% url 'customer_my_orders' %}"><i class="icon-add_shopping_cart"></i>My Orders</a></li>
             <li class="{% if '/profile/' in request.path %}
             active
             {% endif %}"><a href="{% url 'customer_profile' %}"><i class="icon-build"></i>Profile settings</a></li>
-            <li><a href="restaurant-orders.html"><i
-                    class="icon-unlock-alt"></i>Change Password</a></li>
-            <li><a class="logout-btn" href="registration.html"><i class="icon-log-out"></i>Signout</a>
+            <li><a class="logout-btn" href="{% url 'logout' %}"><i class="icon-log-out"></i>Signout</a>
             </li>
         </ul>
     </div>
