--- a/templates/accounts/vendor_dashboard.html
+++ b/templates/accounts/vendor_dashboard.html
@@ -23,6 +23,7 @@
                             <div class="user-holder">
 
                                 <h5 class="text-uppercase">OVERVIEW</h5>
+                                <p class="text-right">Logged in as: <b>{{ user.email }}</b></p>
                                 <div class="row">
                                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                                         <div class="card">
@@ -42,7 +43,8 @@
                                                 Total Revenue
                                             </div>
                                             <div class="card-body text-center">
-                                                <a href="#"><h5 class="card-title">$852.00</h5></a>
+                                                <a href="#"><h5
+                                                        class="card-title">{{ total_revenue | floatformat:2 }}</h5></a>
                                             </div>
 
                                         </div>
@@ -54,7 +56,9 @@
                                                 This month
                                             </div>
                                             <div class="card-body text-center">
-                                                <a href="#"><h5 class="card-title">$231.00</h5></a>
+                                                <a href="#"><h5
+                                                        class="card-title">{{ current_month_revenue | floatformat:2 }}</h5>
+                                                </a>
                                             </div>
 
                                         </div>
@@ -72,30 +76,31 @@
                                                 <div class="responsive-table">
 
                                                     <table class="table table-hover" id="myOrdersTable">
-                                                    <thead>
-                                                    <tr>
-                                                        <th scope="col">Order #</th>
-                                                        <th scope="col">Name</th>
-                                                        <th scope="col">Total</th>
-                                                        <th scope="col">Status</th>
-                                                        <th scope="col">Date</th>
-                                                        <th scope="col">Action</th>
-                                                    </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                    {% for order in recent_orders %}
+                                                        <thead>
                                                         <tr>
-                                                            <td>{{ order.order_number }}</td>
-                                                            <td>{{ order.name }}</td>
-                                                            <td>${{ order.total }}</td>
-                                                            <td>{{ order.status }}</td>
-                                                            <td>{{ order.created_at }}</td>
-                                                            <td><a href="{% url 'vendor_order_detail' order.order_number %}"
-                                                                   class="btn btn-danger">Details</a></td>
+                                                            <th scope="col">Order #</th>
+                                                            <th scope="col">Name</th>
+                                                            <th scope="col">Total</th>
+                                                            <th scope="col">Status</th>
+                                                            <th scope="col">Date</th>
+                                                            <th scope="col">Action</th>
                                                         </tr>
-                                                    {% endfor %}
-                                                    </tbody>
-                                                </table>
+                                                        </thead>
+                                                        <tbody>
+                                                        {% for order in recent_orders %}
+                                                            <tr>
+                                                                <td>{{ order.order_number }}</td>
+                                                                <td>{{ order.name }}</td>
+                                                                <td>${{ order.get_total_by_vendor.grand_total }}</td>
+                                                                <td>{{ order.status }}</td>
+                                                                <td>{{ order.created_at }}</td>
+                                                                <td>
+                                                                    <a href="{% url 'vendor_order_detail' order.order_number %}"
+                                                                       class="btn btn-danger">Details</a></td>
+                                                            </tr>
+                                                        {% endfor %}
+                                                        </tbody>
+                                                    </table>
 
                                                 </div>
                                             </div>
