--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,16 @@
     <!-- Include the PayPal JavaScript SDK -->
     <script src="https://www.paypal.com/sdk/js?client-id={{ PAYPAL_CLIENT_ID }}&currency=USD"></script>
 
+    <!-- Include datatables plugin script and css  -->
+    <link rel="stylesheet" href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
+    <script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#myOrdersTable').DataTable();
+        });
+    </script>
+
     <style>
         body, .main-section p, .mce-content-body p {
             font: Normal 14px/24px "Open Sans", sans-serif;
