--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -34,7 +34,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="copyright-inner">
                         <div class="copy-right">
-                            <p>© 2022 Foodbakery. All Rights Reserved. Developed By <a href="#">Ihor Yu</a>
+                            <p>© {% now "Y" %} FoodOnline. All Rights Reserved. Developed By <a href="https://www.linkedin.com/in/ihor-yukhnovskyi-37a227253/">Ihor Yu</a>
                             </p>
                         </div>
                     </div>
